<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2013 – 2015 Ricki Hirner (bitfire web engineering).
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<resources>

    <string name="davdroid_website">Sync for iCloud Web site</string>
    <string name="title_activity_internet_browser">iCloud Internet Browser</string>
    <string name="about_title">About</string>
    <string name="about_message"></string>

    <string name="icloud_tasks">iCloud Tasks</string>
    <string name="HIDE_AD_BOOLEAN">HIDE_AD_BOOLEAN</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="delete">Delete</string>
    <string name="remove_account">Remove account</string>
    <string name="remove_account_from_device">Remove account from device.</string>
    <string name="add_account">Add account</string>
    <string name="edit_account">Edit account</string>
    <string name="icloud_contacts">iCloud Calendar and Tasks</string>
    <string name="icloud_mail">iCloud Mail</string>
    <string name="tap_it_fast">Tap it fast!</string>
    <string name="press_here_to_install">Press here to install</string>

    <!-- common strings -->
    <string name="app_name">Sync for iCloud Contacts</string>
    <string name="next">Next</string>
    <string name="help">Help</string>

    <string name="exception_cert_path_validation">Untrusted certificate in certificate path. See FAQ for more info.</string>
    <string name="exception_http">HTTP error: %s</string>
    <string name="exception_incapable_resource">Missing capabilities: %s</string>
    <string name="exception_io">I/O error: %s</string>
    <string name="exception_uri_syntax">Invalid URI: %s</string>
    
    <!-- MainActivity -->
    <string name="main_manage_accounts">Manage sync accounts</string>



    <!-- AddAccountActivity -->
    <string name="login_type_email">Login with email address</string>
    <string name="login_type_email_description">Service details will be auto-detected by domain name. Example: myaccount@icloud.com</string>
    <string name="login_type_url">Login with URL and user name</string>
    <string name="login_type_url_description">Service details will be auto-detected by initial URL and user name. Mostly used for self-hosted services.</string>
    
    <string name="login_email_description">Please enter your email address. Its domain name will be used to auto-detect service settings.</string>
    <string name="login_email_address">Email:</string>
    
    <string-array name="login_url_scheme">
        <item>http://</item>
        <item>https://</item>
    </string-array>
    <string name="login_http_warning">"If you don't use encryption (HTTPS), other people may easily intercept your login details, contacts and events."</string>
    <string name="login_user_name">User name:</string>
    <string name="login_base_url">Base URL (collections will be auto-detected):</string>
    <string name="login_auth_preemptive">Preemptive authentication (recommended, but incompatible with Digest auth)</string>

    <string name="login_password">Password:</string>

    <!-- Settings activity -->
    <string name="settings_title">Settings</string>
    <string name="settings_no_accounts">No iCloud accounts found</string>
    <string name="settings_authentication">Authentication</string>
    <string name="settings_username">User name</string>
    <string name="settings_enter_username">Enter user name:</string>
    <string name="settings_password">Password</string>
    <string name="settings_password_summary">Update the password according to your server.</string>
    <string name="settings_enter_password">Enter your password:</string>
    <string name="settings_preemptive">Pre-emptive authentication</string>
    <string name="settings_preemptive_on">Credentials are sent with every request (recommended)</string>
    <string name="settings_preemptive_off">Credentials are sent after server requests them</string>
    <string name="settings_sync">Synchronization</string>
    <string name="settings_sync_interval_contacts">Contacts sync. interval</string>
    <string name="settings_sync_summary_manually">Only manually</string>
    <string name="settings_sync_summary_periodically">Every %d minutes + immediately on local changes</string>
    <string name="settings_sync_summary_not_available">Not available</string>
    <string name="settings_sync_interval_calendars">Calendars sync. interval</string>
    <string-array name="settings_sync_interval_seconds">
        <item>-1</item>
        <item>300</item>
        <item>600</item>
        <item>900</item>
        <item>3600</item>
        <item>7200</item>
        <item>14400</item>
        <item>86400</item>
    </string-array>
    <string-array name="settings_sync_interval_names">
        <item>Only manually</item>
        <item>Every 5 minutes</item>
        <item>Every 10 minutes</item>
        <item>Every 15 minutes</item>
        <item>Every hour</item>
        <item>Every 2 hours</item>
        <item>Every 4 hours</item>
        <item>Once a day</item>
    </string-array>
    <string name="settings_carddav">Address book</string>
    <string name="settings_carddav_vcard4_support">VCard 4.0 support</string>
    <string name="settings_carddav_vcard4_supported">Contacts are sent in VCard 4.0 format</string>
    <string name="settings_carddav_vcard4_not_supported">Contacts are sent in VCard 3.0 format</string>

    <string name="setup_select_collections">iCloud: Select collections</string>
    <string name="setup_neither_caldav_nor_carddav">No iCloud service is available at this location.</string>
    <string name="setup_add_account">Add account</string>
    <string name="setup_querying_server">Querying server. Please wait…</string>
    <string name="setup_what_to_sync">Which collections shall be synchronized?</string>
    <string name="setup_address_books">Address books</string>
    <string name="setup_calendars">Calendars</string>
    <string name="setup_select_address_book">Select up to one address book (tap again to unselect):</string>
    <string name="setup_select_calendars">Select your calendars:</string>
    
    <string name="setup_account_details">Account details</string>
    <string name="setup_account_name">Account name:</string>
    <string name="setup_account_name_hint">My iCloud Account</string>
    <string name="setup_email_address">Email address:</string>
    <string name="setup_organizer_hint">"ORGANIZER of your events; required if you use attendee info"</string>
    <string name="setup_account_name_info">"Use your email address as account name because Android will use the account name as ORGANIZER field for events you create. You can't have two accounts with the same name.</string>
    <string name="setup_read_only">read-only</string>

    <string name="sync_error_title">Synchronization failed</string>

</resources>
