<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">

    <ScrollView android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:columnCount="2"
            android:padding="10dp"
            android:useDefaultMargins="true" >

            <TextView
                android:layout_columnSpan="2"
                android:layout_gravity="start"
                android:layout_marginBottom="20dp"
                android:text="@string/setup_account_details"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_gravity="start"
                android:text="@string/setup_account_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/account_name"
                android:layout_gravity="fill_horizontal"
                android:hint="@string/setup_account_name_hint"
                android:inputType="textEmailAddress">
                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/account_name_info"
                android:layout_width="fill_parent"
                android:layout_columnSpan="2"
                android:layout_gravity="start"
                android:drawableLeft="@drawable/extra_actions_about"
                android:drawableStart="@drawable/extra_actions_about"
                android:drawablePadding="10dp"
                android:padding="10dp"
                android:text="@string/setup_account_name_info"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Space
                android:layout_gravity="start|top"
                android:layout_row="3" />

        </GridLayout>

    </ScrollView>

</RelativeLayout>